force-app/main/default/objects/Int_Party__c/Int_Party__c.object-meta.xml
<CustomObject>
    <description>Int Party</description>
    <label>Int Party</label>
    <nameField>
        <displayFormat>PAR-{0000000000}</displayFormat>
        <label>Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>