force-app/main/default/objects/Int_Party__c/fields/Applicable_Default_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Default_Reason_Code__c</fullName>
    <description>Applicable Default Reason Code</description>
    <label>Applicable Default Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>