force-app/main/default/objects/Int_Party__c/fields/Basel_Classification__c.field-meta.xml
<CustomField>
    <fullName>Basel_Classification__c</fullName>
    <description>Basel Classification</description>
    <label>Basel Classification</label>
    <length>10</length>
    <type>Text</type>
</CustomField>