force-app/main/default/objects/Int_Party__c/fields/Basel_Classification_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basel_Classification_Amount__c</fullName>
    <description>Basel Classification Amount</description>
    <label>Basel Classification Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>