force-app/main/default/objects/Int_Party__c/fields/Consolidated_Turnover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Turnover_Amount__c</fullName>
    <description>Consolidated Turnover Amount</description>
    <label>Consolidated Turnover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>