force-app/main/default/objects/Int_Party__c/fields/Default_Determination_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Determination_Code__c</fullName>
    <description>Default Determination Code</description>
    <label>Default Determination Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>