force-app/main/default/objects/Int_Party__c/fields/Individual_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Individual_Indicator__c</fullName>
    <description>Individual Indicator</description>
    <label>Individual Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>