force-app/main/default/objects/Int_Party__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <description>Industry Code</description>
    <label>Industry Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>