force-app/main/default/objects/Int_Party__c/fields/Industry_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type_Code__c</fullName>
    <description>Industry Type Code</description>
    <label>Industry Type Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>