force-app/main/default/objects/Int_Party__c/fields/LE_Size__c.field-meta.xml
<CustomField>
    <fullName>LE_Size__c</fullName>
    <description>LE Size</description>
    <label>LE Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>