force-app/main/default/objects/Int_Party__c/fields/Legal_Form_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Code__c</fullName>
    <description>Legal Form Code</description>
    <label>Legal Form Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>