force-app/main/default/objects/Int_Party__c/fields/Legal_Proceedings_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Proceedings_Initiation_Date__c</fullName>
    <description>Legal Proceedings Initiation  Date</description>
    <label>Legal Proceedings Initiation  Date</label>
    <type>Date</type>
</CustomField>