force-app/main/default/objects/Int_Party__c/fields/Legal_Proceedings_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Proceedings_Status_Code__c</fullName>
    <description>Legal Proceedings Status Code</description>
    <label>Legal Proceedings Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>