force-app/main/default/objects/Int_Party__c/fields/Loan_Quality_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Loan_Quality_Classification_Code__c</fullName>
    <description>Loan Quality Classification Code</description>
    <label>Loan Quality Classification Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>