force-app/main/default/objects/Int_Party__c/fields/Party_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Contract_Name__c</fullName>
    <label>Party Contract Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>