force-app/main/default/objects/Int_Party__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <description>Party Name</description>
    <label>Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>