force-app/main/default/objects/Int_Party__c/fields/PD_LookupType__c.field-meta.xml
<CustomField>
    <fullName>PD_LookupType__c</fullName>
    <description>PD LookupType</description>
    <label>PD LookupType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>