force-app/main/default/objects/Int_Party__c/fields/PD_Percentage__c.field-meta.xml
<CustomField>
    <fullName>PD_Percentage__c</fullName>
    <description>PD Percentage</description>
    <label>PD Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>