force-app/main/default/objects/Int_Party__c/fields/PD_Rating_Model__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating_Model__c</fullName>
    <description>PD Rating Model</description>
    <label>PD Rating Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>