force-app/main/default/objects/Int_Party__c/fields/PD_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating_Score__c</fullName>
    <description>PD Rating Score</description>
    <label>PD Rating Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>