force-app/main/default/objects/Int_Party__c/fields/PD_Rating_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Rating_Score_Date__c</fullName>
    <description>PD Rating Score Date</description>
    <label>PD Rating Score Date</label>
    <type>Date</type>
</CustomField>