force-app/main/default/objects/Int_Party__c/fields/PD_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Review_Date__c</fullName>
    <description>PD Review Date</description>
    <label>PD Review Date</label>
    <type>Date</type>
</CustomField>