force-app/main/default/objects/Int_Party__c/fields/Rabobank_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Rabobank_Risk_Rating__c</fullName>
    <description>Rabobank Risk Rating</description>
    <label>Rabobank Risk Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>