force-app/main/default/objects/Int_Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Party_Name__c</columns>
    <columns>Party_Number__c</columns>
    <columns>Individual_Indicator__c</columns>
    <columns>Committed__c</columns>
    <columns>PD_Rating_Score__c</columns>
    <columns>PD_Percentage__c</columns>
    <columns>Party_Contract_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>